--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "deep-extend": "^0.6.0",
     "handlebars": "^4.1.2",
     "hoek": "^6.1.3",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "merge": "^1.2.1",
     "tunnel-agent": "^0.6.0"
