--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "braces": "^3.0.2",
     "cryptiles": "^4.1.3",
     "deep-extend": "^0.6.0",
     "handlebars": "^4.1.2",
@@ -57,6 +58,7 @@
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "merge": "^1.2.1",
-    "tunnel-agent": "^0.6.0"
+    "tunnel-agent": "^0.6.0",
+    "underscore.string": "^3.3.5"
   }
 }
